--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
     </div> -->
     <img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail">
 
-    <nav class="nav nav-pills nav-fill">
-        <a class="nav-item nav-link active" href="#">Active</a>
-        <a class="nav-item nav-link" href="#">Much longer nav link</a>
-        <a class="nav-item nav-link" href="#">Link</a>
-        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    <nav class="nav">
+        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#">Specifications</a>
+        <a class="nav-link" href="#">Project</a>
+        <a class="nav-link" href="#">Team</a>
       </nav>
 <div class = "welcome-header"> Welcome!</div>
 <div class="welcome-text">Hello, welcome to our CPI 310 group project. We jfjdajd skdkfk. sjksdjdkjakj! kdx
