set up pages & more skeleton

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         <a class="nav-link" href="#">Project</a>
         <a class="nav-link" href="#">Team</a>
       </nav>
-<div class = "welcome-header"> Welcome!</div>
-<div class="welcome-text">Hello, welcome to our CPI 310 group project. We jfjdajd skdkfk. sjksdjdkjakj! kdx
-    ksdjcksjk!! vcksmksm!! :))
+<div class = "welcome-header"> Welcome.</div>
+<div class="welcome-text">
+  <strong>Warning Watchers</strong>
+  <br> <i>"Can you watch that with your parents?"</i>
 </div>
    
 
