comments + welcome page additions

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!-- WELCOME PAGE -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,6 +18,7 @@
 
 <body>
 
+  <!-- Logo and NavBar-->
   <img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail">
   <div class="container">
     <nav class="navbar navbar-expand">
@@ -30,12 +31,17 @@
     </ul>
     </nav>
   </div>
-    
+  
+  <!-- image link: https://unsplash.com/photos/A-obUh61bKw -->
+  <img src="welcome_photo_JonTyson_UnSplash.jfif" class="img-fluid" alt="Welcome Photo">
 
+<!-- Welcome Header and Sub-Headings -->
 <div class = "welcome-header"> Welcome.</div>
 <div class="welcome-text">
   <strong>Warning Watchers</strong>
   <br> <i>"Can you watch that with your parents?"</i>
+  <br> <small>Uncomfortable with spiders? Afraid of random jump scares? Prefer not to see unnecessarily long scenes of public displays of affection? Warning Watchers compiles a searchable database of media that you can look at ahead of time to see if a movie is suitable for not only your family to watch together, but for yourself, friends, and anyone else you want to get together with! 
+  </small>
 </div>
    
 
