proper skeleton + added some content

--- a/project.html
+++ b/project.html
@@ -32,11 +32,21 @@
   </div>
     
 
-<div class = "welcome-header"> Welcome.</div>
-<div class="welcome-text">
-  <strong>Warning Watchers</strong>
-  <br> <i>"Can you watch that with your parents?"</i>
-</div>
+  <div class = "proj-header"> Schedule/Milestones</div>
+  <div class="proj-text">
+    <br> <i>"Can you watch that with your parents?"</i>
+  </div>
+
+  <div class = "proj-header"> Features to be added (If time permits)</div>
+  <div class="proj-text">
+    <br> <i>"Can you watch that with your parents?"</i>
+  </div>
+
+  <div class = "proj-header"> Features lost (If time limits)</div>
+  <div class="proj-text">
+    <br> <i>"Can you watch that with your parents?"</i>
+  </div>
+
    
 
 
