--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="index.css" rel="stylesheet">
+    <link href="project.css" rel="stylesheet">
   </head>
 
 <body>
@@ -31,12 +31,15 @@
     </nav>
   </div>
     
+  <div class="container project-container">
+    <div class="project-content">
+      <br><br>
+      <img src="family-laughing-at-tv.jpeg" style="width:800px;height:400px;text-align:center;" alt="family laughing watching TV">
+      <br><br>
+      Welcome.
+    </div>
+  </div>
 
-<div class = "welcome-header"> Welcome.</div>
-<div class="welcome-text">
-  <strong>Warning Watchers</strong>
-  <br> <i>"Can you watch that with your parents?"</i>
-</div>
    
 
 
