project page + bio team comments

--- a/project.html
+++ b/project.html
@@ -30,31 +30,43 @@
     </ul>
     </nav>
   </div>
-    
-  <div class="container project-container">
-    <div class="project-content">
-      <br><br>
-      <img src="family-laughing-at-tv.jpeg" style="width:800px;height:400px;text-align:center;" alt="family laughing watching TV">
-      <br><br>
-      Welcome.
-    </div>
-  </div>
+
+  <div class = "main-header"> Project Plan.</div>
 
   <div class = "proj-header"> Schedule/Milestones</div>
   <div class="proj-text">
-    <br> <i>"Can you watch that with your parents?"</i>
+    <ul>
+      <li><strong>Friday, Oct 9th</strong> -- (Team Deadline) Write up for pitch and website due</li>
+      <li><strong>Friday, Oct 16th</strong> -- Team Company HTML website with pitch & etc. due</li>
+      <li><strong>???</strong> -- Check In #1</li>
+      <li><strong>???</strong>> -- Prototype</li>
+      <li><strong>???</strong> -- Check In #2(?)</li>
+      <li><strong>???</strong> -- Check In #3(?)</li>
+      <li><strong>Friday, December 4th(?)</strong> -- Final Project Presentation</li>
+      <li><strong>Friday, December 4th(?)</strong> -- Final Project</li>
+    </ul>
   </div>
 
   <div class = "proj-header"> Features to be added (If time permits)</div>
   <div class="proj-text">
-    <br> <i>"Can you watch that with your parents?"</i>
+    <ul>
+      <li>Website aesthetics</li>
+      <li>Chat feature</li>
+      <li>Searchable by Film Director/Year/Alphabetical order directory</li>
+      <li>Ability to apply to be an admin/moderator </li>
+      <li>Ability to save favorite films</li>
+    </ul>
   </div>
 
   <div class = "proj-header"> Features lost (If time limits)</div>
   <div class="proj-text">
-    <br> <i>"Can you watch that with your parents?"</i>
+    <ul>
+      <li>Post comment features</li>
+      <li>User personal profile page</li>
+      <li>Ability to upload media</li>
+    </ul>
   </div>
-
+</div>
    
 
 
