--- a/project.html
+++ b/project.html
@@ -18,6 +18,7 @@
 
 <body>
 
+  <!-- LOGO & NAVBAR -->
   <img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail">
   <div class="container">
     <nav class="navbar navbar-expand">
@@ -31,8 +32,11 @@
     </nav>
   </div>
 
+  <!-- HEADING -->
+  <img src= "https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" class="img-fluid" alt="Welcome Photo">
   <div class = "main-header"> Project Plan.</div>
 
+  <!-- INFORMATION -->
   <div class = "proj-header"> Schedule/Milestones</div>
   <div class="proj-text">
     <ul>
