--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="index.css" rel="stylesheet">
+    <link href="about.css" rel="stylesheet">
   </head>
 
 <body>
@@ -32,14 +32,33 @@
     </nav>
   </div>
     
-
-<div class = "about-header"> About Us.</div>
-<div class="about-text">
-  <br> Have you ever been watching a movie/show with your parents or family and a scene comes up that makes everyone uncomfortable? Next time, make sure to check out Warning Watchers first! Warning Watchers is a site that provides to you warnings of specific content that might not ever be mentioned in official movie ratings. Uncomfortable with spiders? Afraid of random jump scares? Prefer not to see unnecessarily long scenes of public displays of affection? Warning Watchers compiles a searchable database of media that you can look at ahead of time to see if a movie is suitable for not only your family to watch together, but for yourself, friends, and anyone else you want to get together with! 
-  <br> Our company aims to create a user-managed (but admin-monitored) website that allows users to submit a piece of media (movie, show, book, etc.) into a database along with categories of content warnings (animal death, strong language, etc.). The actions of commenting and rating warnings/comments/submissions can only be done by registered members of the site. Users (both guests and members) of the site can either search by ‘Title’ of the media or by the Content Category which consist of a variety of warnings. Users are welcome to view the site but no actions on posts and such cannot take place until they register with the website.
+  <div class="container project-container">
+    <div class="project-content">
+      <br><br>
+      <img src="family-laughing-at-tv.jpeg" style="width:800px;height:400px;text-align:center;"
+        alt="family laughing watching TV">
+      <br><br>
   
-</div>
-   
+      <div class="about-header"> About Us.</div>
+      <div class="about-text">
+        <br> Have you ever been watching a movie/show with your parents or family and a scene comes up that makes everyone
+        uncomfortable? Next time, make sure to check out Warning Watchers first! Warning Watchers is a site that provides
+        to you warnings of specific content that might not ever be mentioned in official movie ratings. Uncomfortable with
+        spiders? Afraid of random jump scares? Prefer not to see unnecessarily long scenes of public displays of
+        affection? Warning Watchers compiles a searchable database of media that you can look at ahead of time to see if a
+        movie is suitable for not only your family to watch together, but for yourself, friends, and anyone else you want
+        to get together with!
+        <br> Our company aims to create a user-managed (but admin-monitored) website that allows users to submit a piece
+        of media (movie, show, book, etc.) into a database along with categories of content warnings (animal death, strong
+        language, etc.). The actions of commenting and rating warnings/comments/submissions can only be done by registered
+        members of the site. Users (both guests and members) of the site can either search by ‘Title’ of the media or by
+        the Content Category which consist of a variety of warnings. Users are welcome to view the site but no actions on
+        posts and such cannot take place until they register with the website.
+  
+      </div>
+  
+    </div>
+  </div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
