--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
       <li><strong>Friday, Oct 9th</strong> -- (Team Deadline) Write up for pitch and website due</li>
       <li><strong>Friday, Oct 16th</strong> -- Team Company HTML website with pitch & etc. due</li>
       <li><strong>???</strong> -- Check In #1</li>
-      <li><strong>???</strong>> -- Prototype</li>
+      <li><strong>???</strong> -- Prototype</li>
       <li><strong>???</strong> -- Check In #2(?)</li>
       <li><strong>???</strong> -- Check In #3(?)</li>
       <li><strong>Friday, December 4th(?)</strong> -- Final Project Presentation</li>
