added footer + tweaks

--- a/about.html
+++ b/about.html
@@ -60,6 +60,9 @@
     </div>
   </div>
 
+  <footer>
+    CPI310 Fall 2020 Project. All Rights Reserved.
+  </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
