--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   
   <!-- image link: https://unsplash.com/photos/A-obUh61bKw -->
-  <img src="welcome_photo_JonTyson_UnSplash.jfif" class="img-fluid" alt="Welcome Photo">
+  <img src= "https://images.unsplash.com/photo-1594909122845-11baa439b7bf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" class="img-fluid" alt="Welcome Photo">
 
 <!-- Welcome Header and Sub-Headings -->
 <div class = "welcome-header"> Welcome.</div>
@@ -44,7 +44,9 @@
   </small>
 </div>
    
-
+<footer>
+  CPI310 Fall 2020 Project. All Rights Reserved.
+</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
