update about and index page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   <div class="container project-container">
     <div class="project-content">
       <br><br>
-      <img src="family-laughing-at-tv.jpeg" style="width:800px;height:400px;text-align:center;"
+      <img src="family-laughing-at-tv.jpeg" style="width:800px;height:400px;margin:0 auto; display:block;"
         alt="family laughing watching TV">
       <br><br>
   
