--- a/specifications.html
+++ b/specifications.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- LOGO & NAVBAR -->
-  <img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail">
+  <a href="index.html"><img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail"></a>
   <div class="container">
     <nav class="navbar navbar-expand">
     <ul class="navbar-nav">
