--- a/specifications.html
+++ b/specifications.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="main-logo-white.png">
+    <link rel="icon" href="img/main-logo-white.png">
     <title>Warning Watchers</title>
     
     <link href='http://fonts.googleapis.com/css?family=Cuprum|Cookie' rel='stylesheet' type='text/css'>  
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="specifications.css" rel="stylesheet">
+    <link href="styling/specifications.css" rel="stylesheet">
   </head>
 
 <body>
 
   <!-- LOGO & NAVBAR -->
-  <a href="index.html"><img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail"></a>
+  <a href="index.html"><img src="img/main-logo-alabaster.png" alt="main logo" class="img-thumbnail"></a>
   <div class="container">
     <nav class="navbar navbar-expand">
     <ul class="navbar-nav">
@@ -80,14 +80,14 @@
 
   <div class = "specs-header"> Case Analysis Diagram</div>
   <div class="specs-text">
-    <img src= "useCaseAnalysisWarningWatchers.png" class="img-diagram" alt="Welcome Photo">
+    <img src= "img/useCaseAnalysisWarningWatchers.png" class="img-diagram" alt="Welcome Photo">
     <p style="text-align: center;"><i>Created by Kai Sanford and Nate Renfro.</i></p>
   </div>
 </div>
 
   <div class = "specs-header"> Database Design Diagram</div>
   <div class="specs-text">
-    <img src= "datebase design.PNG" class="img-diagram" alt="Welcome Photo">
+    <img src= "img/datebase design.PNG" class="img-diagram" alt="Welcome Photo">
     <p style="text-align: center;"><i>Created by Jacob Melendrez and Sammy Romero.</i></p>
   </div>
 </div>
