--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="main-logo-white.png">
+    <link rel="icon" href="img/main-logo-white.png">
     <title>Warning Watchers</title>
     
     <link href='http://fonts.googleapis.com/css?family=Cuprum|Cookie' rel='stylesheet' type='text/css'>  
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="about.css" rel="stylesheet">
+    <link href="styling/about.css" rel="stylesheet">
   </head>
 
 <body>
 
   <!-- Logo and NavBar -->
-  <a href="index.html"><img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail"></a>
+  <a href="index.html"><img src="img/main-logo-alabaster.png" alt="main logo" class="img-thumbnail"></a>
   <div class="container">
     <nav class="navbar navbar-expand">
     <ul class="navbar-nav">
@@ -35,7 +35,7 @@
   <div class="container project-container">
     <div class="project-content">
       <br><br>
-      <img src="family-laughing-at-tv.jpeg" style="width:800px;height:400px;margin:0 auto; display:block;"
+      <img src="img/family-laughing-at-tv.jpeg" style="width:800px;height:400px;margin:0 auto; display:block;"
         alt="family laughing watching TV">
       <br><br>
   
